[gd_scene load_steps=9 format=2]

[ext_resource path="res://booky/booky.png" type="Texture" id=1]
[ext_resource path="res://booky/booky.gd" type="Script" id=2]
[ext_resource path="res://booky/booky_blink.tres" type="Animation" id=3]

[sub_resource type="Animation" id=1]
resource_name = "LookDown"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Eyes:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Eyes:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=2]
resource_name = "LookFront"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Eyes:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Eyes:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1.892, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=3]
resource_name = "LookLeft"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Eyes:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -3.99426, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Eyes:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -2.94313, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=4]
resource_name = "LookRight"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Eyes:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2.94312, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Eyes:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -3.36358, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=5]
resource_name = "LookUp"
length = 0.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("Eyes:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Eyes:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1 )
}

[node name="Booky" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Eyes" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 100, 0, 100, 100 )

[node name="Eyelids" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
region_enabled = true
region_rect = Rect2( 200, 0, 400, 100 )

[node name="Mouth" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3
region_enabled = true
region_rect = Rect2( 600, 0, 400, 100 )

[node name="LookAroundAnimation" type="AnimationPlayer" parent="."]
anims/LookDown = SubResource( 1 )
anims/LookFront = SubResource( 2 )
anims/LookLeft = SubResource( 3 )
anims/LookRight = SubResource( 4 )
anims/LookUp = SubResource( 5 )

[node name="LookAroundTimer" type="Timer" parent="."]
one_shot = true

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Blink = ExtResource( 3 )

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true

[node name="TalkTimer" type="Timer" parent="."]
wait_time = 0.1
